Fix for info popover on small screens (#2297)
* Remove nowrap from infoPopover CSS

* Change popover min-width to auto on small screens to avoid horizontal scroll

* avoid div as child of p element, gives console error

* minor fix for infopopover on small screens

--- a/src/features/amUI/common/AccessPackageInfoPopover/AccessPackageInfoPopover.module.css
+++ b/src/features/amUI/common/AccessPackageInfoPopover/AccessPackageInfoPopover.module.css
@@ -11,6 +11,6 @@
 
 @media (max-width: 768px) {
   .popover {
-    min-width: 100%;
+    min-width: 90%;
   }
 }
