--- a/src/features/amUI/poaOverview/AccessPackagePermissions.module.css
+++ b/src/features/amUI/poaOverview/AccessPackagePermissions.module.css
@@ -6,6 +6,5 @@
 .infoPopover {
   margin-top: calc(-1 * var(--ds-spacing-1));
   display: inline-flex;
-  white-space: nowrap;
   vertical-align: middle;
 }
